More progress on layout

--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,9 @@
       operated by Doug and Tracy Langston and has been servicing Middle Tennessee and surrounding
       areas, including Knoxville and Chattanooga with the highest quality in fencing materials
       and expert installation since 1983. All types and styles of fencing for both residential
-      and commercial applications are available">
-    <meta name="viewport" content="width=device-width">
+      and commercial applications are available.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -24,6 +24,34 @@
 
   </head>
   <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <div class="navbar navbar-default navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Fences Unlimited Inc.</a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Examples</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -35,32 +63,29 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="images/wood-fences/wood-fence-4.jpg" alt="First slide">
+          <img src="images/RealFenceBanner.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Wood Fences</h1>
-              <p></p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Fences Unlimited Inc.</h1>
+              <p>Expert installation since 1983.</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img src="images/wood-fences/wood-fence-4.jpg" alt="Wood fence">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Wood Fences</h1>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="images/farm-fences/farm-fence-4.jpg" alt="Wood fence">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Farm Fences</h1>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -80,61 +105,116 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Free Estimates</h2>
-          <p>Call (615) 299-9979 or E-mail us today with your fencing needs and we will schedule a time to come out and give you a free estimate. We accept all major credit cards and financing is available.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <a href="#free-estimates-details">
+            <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <h2>Free Estimates</h2>
+          </a>
+          <p>Call (615) 299-9979 or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us today!</p>
         </div><!-- /.col-lg-4 -->
+
         <div class="col-lg-4">
           <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Residential</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="images/aluminum-fences/aluminum-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
           <h2>Commercial</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <h2>Contact Us</h2>
+          <p><a class="btn btn-default" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+
+          <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <h2>Wood Fences</h2>
+          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
+          <h2>Farm Fences</h2>
+          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <h2>Vinyl Fence</h2>
+          <p><a class="btn btn-default" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+
+          <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <h2>Aluminum Fence</h2>
+          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
+          <h2>Chain Link Fence</h2>
+          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id="free-estimates-details">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Free Estimates</h2>
+          <p class="lead">Call (615) 299-9979 or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us today with your fencing needs and we will schedule a time to come out and give you a free estimate. We accept all major credit cards and financing is available.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="images/vinyl-fences/vinyl-fence-2.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id="residential-details">
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="images/vinyl-fences/vinyl-fence-14.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Residential</h2>
+          <ul class="lead">
+            <li>Treated Pine or Western Cedar Wood Fences</li>
+            <li>Wooden Fence Refurbishing and Staining</li>
+            <li>Barbed Wire, Wood, or Vinyl Farm Fence</li>
+            <li>Chain Link</li>
+            <li>Vinyl Fences and Handrails</li>
+            <li>Ornamental Aluminum and Steel Fence and Handrails</li>
+            <li>Custom Decks</li>
+            <li>Masonry Columns</li>
+            <li>Driveway and Fence Gates</li>
+          </ul>
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id="commercial-details">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Commercial</h2>
+          <ul class="lead">
+            <li>Tennis Courts, Sports Fields, and Netting</li>
+            <li>Industrial Security Gates and Fencing</li>
+            <li>Warehouse - Indoor</li>
+            <li>Prisons</li>
+            <li>Communication Towers</li>
+            <li>Parking Lots</li>
+            <li>Other Commercial Fencing Applications</li>
+          </ul>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="images/commercial/commercial-7.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
