using different banner on home. other minor changes.

--- a/app/index.html
+++ b/app/index.html
@@ -24,75 +24,22 @@
 
   </head>
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
 
-        <div class="navbar navbar-default navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Fences Unlimited Inc.</a>
-            </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#contact">Examples</a></li>
-              </ul>
-            </div>
-          </div>
+    <div class="jumbotron-home">
+      <div class="jumbotron-overlay">
+        <div class="container">
+          <h1>Fences Unlimited Inc.</h1>
+          <p>
+            Fences Unlimited Inc has been exclusively owned and operated by Doug and Tracy Langston
+            and has been servicing Middle Tennessee and surrounding areas, including Knoxville and
+            Chattanooga with the highest quality in fencing materials and expert installation since 1983.
+          </p><p>
+            All types and styles of fencing for both residential and commercial applications are available,
+            look below for a full list.
+          </p>
         </div>
-
       </div>
     </div>
-
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="images/RealFenceBanner.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Fences Unlimited Inc.</h1>
-              <p>Expert installation since 1983.</p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/wood-fences/wood-fence-4.jpg" alt="Wood fence">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Wood Fences</h1>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/farm-fences/farm-fence-4.jpg" alt="Wood fence">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Farm Fences</h1>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div><!-- /.carousel -->
 
 
 
@@ -104,62 +51,43 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
           <a href="#free-estimates-details">
             <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <h2>Free Estimates</h2>
           </a>
           <p>Call (615) 299-9979 or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us today!</p>
-        </div><!-- /.col-lg-4 -->
+        </div><!-- /.col-sm-4 -->
 
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Residential</h2>
-          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
-          <h2>Commercial</h2>
-          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        <div class="col-sm-4">
+          <a href="#residential-details">
+            <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <h2>Residential</h2>
+          </a>
+        </div><!-- /.col-sm-4 -->
+
+        <div class="col-sm-4">
+          <a href="#commercial-details">
+            <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
+            <h2>Commercial</h2>
+          </a>
+        </div><!-- /.col-sm-4 -->
       </div><!-- /.row -->
 
       <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Contact Us</h2>
-          <p><a class="btn btn-default" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-sm-4 col-sm-offset-2">
+          <a href="#commercial-details">
+            <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <h2>Contact Us</h2>
+          </a>
+        </div><!-- /.col-sm-4 -->
 
-          <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Wood Fences</h2>
-          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
-          <h2>Farm Fences</h2>
-          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/farm-fences/farm-fence-3.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Vinyl Fence</h2>
-          <p><a class="btn btn-default" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-
-          <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Aluminum Fence</h2>
-          <p><a class="btn btn-default" href="#residential-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="images/commercial/commercial-1.jpg" alt="Commercial fence" style="width: 140px; height: 140px;">
-          <h2>Chain Link Fence</h2>
-          <p><a class="btn btn-default" href="#commercial-details" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        <div class="col-sm-4">
+          <a href="#commercial-details">
+            <img class="img-circle" src="images/gates/gate-7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <h2>Examples</h2>
+          </a>
+        </div><!-- /.col-sm-4 -->
       </div><!-- /.row -->
 
       <!-- START THE FEATURETTES -->
@@ -261,7 +189,6 @@
     </script>
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
     <!-- endbuild -->
 </body>
 </html>
