--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home | Fences Unlimited Inc.</title>
+    <title>Fences Unlimited Inc.</title>
     <meta name="description" content="Fences Unlimited Inc has been exclusively owned and
       operated by Doug and Tracy Langston and has been servicing Middle Tennessee and surrounding
       areas, including Knoxville and Chattanooga with the highest quality in fencing materials
@@ -10,6 +10,7 @@
       and commercial applications are available.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -24,7 +25,7 @@
     <!-- endbuild -->
 
   </head>
-  <body>
+  <body itemscope itemtype="http://schema.org/HomeAndConstructionBusiness">
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -35,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Fences Unlimited Inc.</a>
+          <a class="navbar-brand" href="/">Fences Unlimited Inc.</a>
         </div>
 
          <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,25 +46,24 @@
             <li><a href="#residential-details">Residential</a></li>
             <li><a href="#commercial-details">Commercial</a></li>
             <li><a href="#examples">Examples</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
 
     <div class="jumbotron-home">
-      <div class="jumbotron-overlay">
-        <div class="container">
-          <h1>Fences Unlimited Inc.</h1>
-          <p>
-            Fences Unlimited Inc has been exclusively owned and operated by Doug and Tracy Langston
-            and has been servicing Middle Tennessee and surrounding areas, including Knoxville and
-            Chattanooga with the highest quality in fencing materials and expert installation since 1983.
-          </p><p>
-            All types and styles of fencing for both residential and commercial applications are available,
-            look below for a full list.
-          </p>
-        </div>
+      <div class="container">
+        <h1>Fences Unlimited Inc.</h1>
+        <p class="lead" itemprop="description">
+          Fences Unlimited Inc has been exclusively owned and operated by Doug and Tracy Langston
+          and has been servicing Middle Tennessee and surrounding areas, including Knoxville and
+          Chattanooga with the highest quality in fencing materials and expert installation since 1983.
+          We guarentee all our work and we're not just pulling your chain.
+        </p><p>
+          All types and styles of fencing for both residential and commercial applications are available,
+          look below for a full list.
+        </p>
       </div>
     </div>
 
@@ -82,7 +82,9 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Free Estimates</h2>
-          <p class="lead">Call (615) 299-9979 or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us today with your fencing needs and we will schedule a time to come out and give you a free estimate. We accept all major credit cards and financing is available.</p>
+          <p class="lead">Call <strong>(615) 299-9979</strong> or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us
+            today with your fencing needs and we will schedule a time to come out and give you a free estimate.
+            We accept <span itemprop="paymentAccepted">all major credit cards and financing is available.</span></p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="images/vinyl-fences/vinyl-fence-2.jpg" alt="Generic placeholder image">
@@ -131,9 +133,36 @@
         </div>
       </div>
 
+      <hr class="featurette-divider" id="contact-us">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <span class="glyphicon glyphicon-phone-alt" style="font-size: 200px;"></span>
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Contact Us</h2>
+          <p class="lead">
+            <address>
+              <strong span itemprop="name">Fences Unlimited Inc</strong><br>
+              Doug &amp; Tracy Langston<br>
+              <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                <span itemprop="postOfficeBoxNumber">P.O. Box 70634</span><br>
+                <span itemprop="addressLocality">Nashville</span>,
+                <span itemprop="addressRegion">Tennessee</span>
+                <span itemprop="postalCode">37207</span><br><br>
+              </span>
+
+              <strong>Phone:</strong><span itemprop="telephone">(615) 299-9979</span><br>
+              <strong>Fax:</strong><span itemprop="faxNumber">(615) 299-9719</span><br>
+              <strong>email:</strong><a href="matlto:tracy@fencesunlimitedinc.com" itemprop="email">Tracy@fencesunlimitedinc.com</a>
+            </address>
+          </p>
+        </div>
+      </div>
+
       <hr class="featurette-divider" id="examples">
 
-      <div class="row featurette col-lg-12">
+      <div class="row featurette">
         <h2 class="featurette-heading">Examples</h2>
         <ul class="nav nav-tabs" role="tablist">
           <li class="active"><a href="#wood-fence-examples" data-toggle="tab">Wood Fences</a></li>
@@ -510,17 +539,19 @@
 
       <!-- /END THE FEATURETTES -->
 
-
       <hr class="featurette-divider">
 
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p class="text-center">&copy; 2014 Company, Inc.</p>
+        <p class="text-center">&copy; Fences Unlimited Inc.</p>
       </footer>
 
     </div><!-- /.container -->
 
+    <!--[if lt IE 9]>
+      <script src="bower_components/respond/dest/respond.src.js"></script>
+    <![endif]-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -543,12 +574,13 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55660225-1', 'auto');
+      ga('send', 'pageview');
     </script>
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
