--- a/app/index.html
+++ b/app/index.html
@@ -617,6 +617,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-55660225-1', 'auto');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
 
