--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
       and commercial applications are available.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="fb:admins" content="1438093509794101" />
     <meta name="robots" content="noindex">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
