Added meta info.

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
       areas, including Knoxville and Chattanooga with the highest quality in fencing materials
       and expert installation since 1983. All types and styles of fencing for both residential
       and commercial applications are available.">
+  <meta http-equiv="Content-Language" content="en-us">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="fb:admins" content="1438093509794101" />
   <title>Fences Unlimited Inc.</title>
