Corrected mailto link typo. Closes #7.

--- a/app/index.html
+++ b/app/index.html
@@ -177,7 +177,7 @@
 
         <strong>Phone:</strong><span itemprop="telephone">(615) 299-9979</span><br>
         <strong>Fax:</strong><span itemprop="faxNumber">(615) 299-9719</span><br>
-        <strong>email:</strong><a href="matlto:tracy@fencesunlimitedinc.com" itemprop="email">Tracy@fencesunlimitedinc.com</a>
+        <strong>email:</strong><a href="mailto:tracy@fencesunlimitedinc.com" itemprop="email">Tracy@fencesunlimitedinc.com</a>
       </address>
       </p>
     </div>
