Updated meta description tag to be within 25-160 characters in length. Closes #11.

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,8 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Fences Unlimited Inc has been exclusively owned and
-      operated by Doug and Tracy Langston and has been servicing Middle Tennessee and surrounding
-      areas, including Knoxville and Chattanooga with the highest quality in fencing materials
-      and expert installation since 1983. All types and styles of fencing for both residential
-      and commercial applications are available.">
+  <meta name="description" content="Fences Unlimited Inc. Servicing Middle Tennessee,
+  including Knoxville and Chattanooga with the highest quality fencing and expert installation since 1983.">
   <meta http-equiv="Content-Language" content="en-us">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="fb:admins" content="1438093509794101" />
