--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Fences Unlimited Inc. Servicing Middle Tennessee,
+  <meta name="description" property="og:description" content="Fences Unlimited Inc. Servicing Middle Tennessee,
   including Knoxville and Chattanooga with the highest quality fencing and expert installation since 1983.">
-  <meta http-equiv="Content-Language" content="en-us">
+  <meta http-equiv="Content-Language" property="og:locale" content="en-us">
+  <meta property="og:site_name" content="Fences Unlimited Inc." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="fb:admins" content="1438093509794101" />
   <title>Fences Unlimited Inc.</title>
