Added isicv4 code. Closes #8.

--- a/app/index.html
+++ b/app/index.html
@@ -596,6 +596,7 @@
   <footer>
     <p class="pull-right"><a href="#">Back to top</a></p>
     <p class="text-center">&copy; Fences Unlimited Inc.</p>
+    <span itemprop="isicV4" class="hidden">4390</span>
   </footer>
 
 </div><!-- /.container -->
