--- a/app/index.html
+++ b/app/index.html
@@ -597,6 +597,7 @@
     <p class="pull-right"><a href="#">Back to top</a></p>
     <p class="text-center">&copy; Fences Unlimited Inc.</p>
     <span itemprop="isicV4" class="hidden">4390</span>
+    <span itemprop="naics" class="hidden">238990</span>
   </footer>
 
 </div><!-- /.container -->
