--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-us">
 <head>
   <meta charset="utf-8">
   <meta name="description" property="og:description" content="Fences Unlimited Inc. Servicing Middle Tennessee,
   including Knoxville and Chattanooga with the highest quality fencing and expert installation since 1983.">
   <meta http-equiv="Content-Language" property="og:locale" content="en-us">
-  <meta property="og:site_name" content="Fences Unlimited Inc." />
+  <meta property="og:site_name" content="Fences Unlimited Inc."/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="fb:admins" content="1438093509794101" />
+  <meta property="fb:admins" content="1438093509794101"/>
   <title>Fences Unlimited Inc.</title>
 
   <!-- Place favicon.ico in the root directory -->
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/magnific-popup/dist/magnific-popup.css" />
+  <link rel="stylesheet" href="bower_components/magnific-popup/dist/magnific-popup.css"/>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -26,13 +26,15 @@
   <script src="/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
 </head>
-<body>
-<body itemscope itemtype="http://schema.org/HomeAndConstructionBusiness" data-spy="scroll" data-target="#bs-example-navbar-collapse-1">
+
+<body itemscope itemtype="http://schema.org/HomeAndConstructionBusiness" data-spy="scroll"
+      data-target="#bs-example-navbar-collapse-1">
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<script>(function (d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
+  js = d.createElement(s);
+  js.id = id;
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
@@ -40,7 +42,8 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -81,13 +84,13 @@
       and has been servicing Middle Tennessee and surrounding areas, including Knoxville and
       Chattanooga with the highest quality in fencing materials and expert installation since 1983.
       We guarentee all our work and we're not just pulling your chain.
-    </p><p>
-    All types and styles of fencing for both residential and commercial applications are available,
-    look below for a full list.
-  </p>
+    </p>
+    <p>
+      All types and styles of fencing for both residential and commercial applications are available,
+      look below for a full list.
+    </p>
   </div>
 </div>
-
 
 
 <!-- Marketing messaging and featurettes
@@ -103,8 +106,8 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Free Estimates</h2>
-      <p class="lead">Call <strong>(615) 299-9979</strong> or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a> us
-        today with your fencing needs and we will schedule a time to come out and give you a free estimate.
+      <p class="lead">Call <strong>(615) 299-9979</strong> or <a href="mailto:tracy@fencesunlimitedinc.com">e-mail</a>
+        us today with your fencing needs and we will schedule a time to come out and give you a free estimate.
         We accept <span itemprop="paymentAccepted">all major credit cards and financing is available.</span></p>
     </div>
     <div class="col-md-5">
@@ -116,7 +119,8 @@
 
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" src="images/aluminum-fences/aluminum-fence-feature.jpg" alt="Residential aluminum fence">
+      <img class="featurette-image img-responsive" src="images/aluminum-fences/aluminum-fence-feature.jpg"
+           alt="Residential aluminum fence">
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">Residential</h2>
@@ -150,7 +154,8 @@
       </ul>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" src="images/commercial/commercial-fence-feature.jpg" alt="Commercial Fence">
+      <img class="featurette-image img-responsive" src="images/commercial/commercial-fence-feature.jpg"
+           alt="Commercial Fence">
     </div>
   </div>
 
@@ -164,14 +169,14 @@
       <h2 class="featurette-heading">Contact Us</h2>
       <p class="lead">
       <address>
-        <strong span itemprop="name">Fences Unlimited Inc</strong><br>
+        <strong itemprop="name">Fences Unlimited Inc</strong><br>
         Doug &amp; Tracy Langston<br>
-              <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                <span itemprop="postOfficeBoxNumber">P.O. Box 70634</span><br>
-                <span itemprop="addressLocality">Nashville</span>,
-                <span itemprop="addressRegion">Tennessee</span>
-                <span itemprop="postalCode">37207</span><br><br>
-              </span>
+                  <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <span itemprop="postOfficeBoxNumber">P.O. Box 70634</span><br>
+                    <span itemprop="addressLocality">Nashville</span>,
+                    <span itemprop="addressRegion">Tennessee</span>
+                    <span itemprop="postalCode">37207</span><br><br>
+                  </span>
 
         <strong>Phone:</strong><span itemprop="telephone">(615) 299-9979</span><br>
         <strong>Fax:</strong><span itemprop="faxNumber">(615) 299-9719</span><br>
@@ -363,7 +368,8 @@
       <div class="tab-pane gallery" id="aluminum-fence-examples">
         <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 thumb">
           <a href="images/aluminum-fences/aluminum-fence-feature.jpg">
-            <img class="img-thumbnail" src="images/aluminum-fences/aluminum-fence-feature.jpg" alt="Residential aluminum fence">
+            <img class="img-thumbnail" src="images/aluminum-fences/aluminum-fence-feature.jpg"
+                 alt="Residential aluminum fence">
           </a>
         </div>
 
@@ -604,11 +610,18 @@
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='https://www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+  (function (b, o, i, l, e, r) {
+    b.GoogleAnalyticsObject = l;
+    b[l] || (b[l] =
+      function () {
+        (b[l].q = b[l].q || []).push(arguments)
+      });
+    b[l].l = +new Date;
+    e = o.createElement(i);
+    r = o.getElementsByTagName(i)[0];
+    e.src = 'https://www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e, r)
+  }(window, document, 'script', 'ga'));
   ga('create', 'UA-55660225-1', 'auto');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
