Updated opening bio.

--- a/app/index.html
+++ b/app/index.html
@@ -81,8 +81,8 @@
     <h1>Fences Unlimited Inc.</h1>
     <p class="lead" itemprop="description">
       Fences Unlimited Inc has been exclusively owned and operated by Doug and Tracy Langston
-      and has been servicing Middle Tennessee and surrounding areas, including Knoxville and
-      Chattanooga with the highest quality in fencing materials and expert installation since 1983.
+      and has been servicing Middle Tennessee and surrounding areas with the highest quality
+      in fencing materials and expert installation since 1983.
       We guarentee all our work and we're not just pulling your chain.
     </p>
     <p>
