Added *some* of the site data to docs

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" property="og:description" content="Fences Unlimited Inc. Servicing Middle Tennessee,
-  including Knoxville and Chattanooga with the highest quality fencing and expert installation since 1983.">
+  and surrounding areas with the highest quality fencing and expert installation since 1983.">
   <meta http-equiv="Content-Language" property="og:locale" content="en-us">
   <meta property="og:site_name" content="Fences Unlimited Inc."/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
