Improve schema data

--- a/refactor/index.html
+++ b/refactor/index.html
@@ -87,6 +87,8 @@
       "addressLocality": "Nashville",
       "telephone": "615-299-9979"
     },
+    "paymentAccepted": "all major credit cards and financing is available.",
+    "currenciesAccepted": "USD",
     "image": "https://www.fencesunlimitedinc.com/images/logo.jpeg",
     "openingHoursSpecification": {
       "@type": "OpeningHoursSpecification",
@@ -100,8 +102,6 @@
         "Friday"
       ]
     },
-    "telephone": "615-299-9979",
-    "url": "https://www.fencesunlimitedinc.com",
     "areaServed": {
       "@type": "GeoCircle",
       "geoMidpoint": {
@@ -111,7 +111,13 @@
       },
       "geoRadius": 120000
     },
-    "email": "tracy@fencesunlimitedinc.com"
+    "url": "https://www.fencesunlimitedinc.com",
+    "telephone": "615-299-9979",
+    "email": "tracy@fencesunlimitedinc.com",
+    "faxNumber": "615-299-9719",
+    "naics": "238990",
+    "isicV4": "4390",
+    "description": "Fences Unlimited Inc has been exclusively owned and operated by Doug and Tracy Langston and has been servicing Middle Tennessee and surrounding areas with the highest quality in fencing materials and expert installation since 1983. We guarantee all our work and we're not just pulling your chain."
   }
 </script>
 
