--- a/src/app.html
+++ b/src/app.html
@@ -152,6 +152,7 @@
 		</script>
 
 		%sveltekit.head%
+		<link rel="stylesheet" href="%sveltekit.assets%/main.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
