--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,8 @@
 		<meta property="og:site_name" content="Fences Unlimited Inc." />
 		<meta property="fb:admins" content="1438093509794101" />
 		<meta http-equiv="Content-Language" property="og:locale" content="en-us" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="https://www.fencesunlimitedinc.com/logo.png" />
 
 		<script type="application/ld+json">
 			{
