--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,15 @@
   and surrounding areas with the highest quality fencing. Contact us today for a free estimate!"
 		/>
 
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+        <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png">
+        <link rel="icon" type="image/png" sizes="256x256" href="/favicon-256.png">
+        <link rel="icon" type="image/png" sizes="128x128" href="/favicon-128.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+        <link rel="alternate icon" href="/favicon.ico">
+
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Fences Unlimited Inc." />
