--- a/src/app.html
+++ b/src/app.html
@@ -13,14 +13,14 @@
   and surrounding areas with the highest quality fencing. Contact us today for a free estimate!"
 		/>
 
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-        <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png">
-        <link rel="icon" type="image/png" sizes="256x256" href="/favicon-256.png">
-        <link rel="icon" type="image/png" sizes="128x128" href="/favicon-128.png">
-        <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-        <link rel="alternate icon" href="/favicon.ico">
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
+		<link rel="icon" type="image/png" sizes="256x256" href="/favicon-256.png" />
+		<link rel="icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
+		<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+		<link rel="alternate icon" href="/favicon.ico" />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
@@ -29,6 +29,11 @@
 		<meta http-equiv="Content-Language" property="og:locale" content="en-us" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:image" content="https://www.fencesunlimitedinc.com/logo.png" />
+		<meta property="og:image" content="https://www.fencesunlimitedinc.com/logo.png" />
+		<meta property="og:image:secure_url" content="https://www.fencesunlimitedinc.com/logo.png" />
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="201" />
+		<meta property="og:image:height" content="217" />
 
 		<script type="application/ld+json">
 			{
