--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!--link rel="icon" href="%sveltekit.assets%/favicon.png" /-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- Default Meta Tags -->
@@ -28,12 +27,12 @@
 		<meta property="fb:admins" content="1438093509794101" />
 		<meta http-equiv="Content-Language" property="og:locale" content="en-us" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://www.fencesunlimitedinc.com/logo.png" />
-		<meta property="og:image" content="https://www.fencesunlimitedinc.com/logo.png" />
-		<meta property="og:image:secure_url" content="https://www.fencesunlimitedinc.com/logo.png" />
-		<meta property="og:image:type" content="image/png" />
-		<meta property="og:image:width" content="201" />
-		<meta property="og:image:height" content="217" />
+		<meta name="twitter:image" content="https://www.fencesunlimitedinc.com/logo.svg" />
+		<meta property="og:image" content="https://www.fencesunlimitedinc.com/logo.svg" />
+		<meta property="og:image:secure_url" content="https://www.fencesunlimitedinc.com/logo.svg" />
+		<meta property="og:image:type" content="image/svg" />
+		<meta property="og:image:width" content="300" />
+		<meta property="og:image:height" content="200" />
 
 		<script type="application/ld+json">
 			{
@@ -41,7 +40,7 @@
 				"@type": "HomeAndConstructionBusiness",
 				"name": "Fences Unlimited Inc",
 				"url": "https://www.fencesunlimitedinc.com",
-				"logo": "https://www.fencesunlimitedinc.com/logo.png",
+				"logo": "https://www.fencesunlimitedinc.com/logo.svg",
 				"address": {
 					"@type": "PostalAddress",
 					"postOfficeBoxNumber": "P.O. Box 70634",
