--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
   and surrounding areas with the highest quality fencing. Contact us today for a free estimate!"
 		/>
 
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 		<link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
 		<link rel="icon" type="image/png" sizes="256x256" href="/favicon-256.png" />
 		<link rel="icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
