--- a/src/app.html
+++ b/src/app.html
@@ -52,7 +52,7 @@
 				"openingHours": "Mo 09:00-05:00 Tu 09:00-05:00 We 09:00-05:30 Th 09:00-05:00 Fr 09:00-05:00",
 				"telephone": "(615) 299-9979",
 				"faxNumber": "(615) 299-9719",
-				"email": "Tracy@fencesunlimitedinc.com",
+				"email": "contact@fencesunlimitedinc.com",
 				"currenciesAccepted": "USD",
 				"isicV4": "4390",
 				"naics": "238990",
