--- a/src/app.html
+++ b/src/app.html
@@ -167,7 +167,56 @@
 		</script>
 
 		%sveltekit.head%
-		<link rel="stylesheet" href="%sveltekit.assets%/main.css" />
+
+        <style>
+            /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+            button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}
+        </style>
+        <style>
+            :root {
+                /* Colors */
+                --color-primary: #a73952;
+                --color-text-dark: #333;
+                --color-text-muted: #666;
+                --color-background-light: #f5f5f5;
+                --color-nav-background: #d0c89a;
+            }
+
+            body {
+                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+                font-size: 18px;
+                line-height: 1.25;
+                text-rendering: optimizeLegibility;
+            }
+
+
+            @font-face{
+                font-family: "Poppl Laudatio Regular";
+                src: local("Poppl Laudatio Regular"),
+                url("%sveltekit.assets%/Poppl-Laudatio Regular.woff2") format("woff2"),
+                url("%sveltekit.assets%/Poppl-Laudatio Regular.woff") format("woff");
+                font-weight: normal;
+                font-style: normal;
+                font-display: block;
+            }
+
+            h1, h2, h3, h4, h5, h6 {
+                font-family: "Poppl Laudatio Regular", serif;
+            }
+
+            .nav-links a {
+                font-family: "Poppl Laudatio Regular", serif;
+            }
+
+            .main-tagline {
+                font-family: "Poppl Laudatio Regular", serif;
+                color: var(--color-primary, #a73952);
+            }
+
+            .main-tagline p {
+                color: var(--color-primary, #a73952);
+            }
+        </style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
