--- a/src/app.html
+++ b/src/app.html
@@ -33,6 +33,7 @@
 		<meta property="og:image:type" content="image/svg" />
 		<meta property="og:image:width" content="300" />
 		<meta property="og:image:height" content="200" />
+		<meta property="og:logo" content="https://www.fencesunlimitedinc.com/logo.svg" size="300x200" />
 
 		<script type="application/ld+json">
 			{
