--- a/src/app.html
+++ b/src/app.html
@@ -27,12 +27,21 @@
 		<meta property="fb:admins" content="1438093509794101" />
 		<meta http-equiv="Content-Language" property="og:locale" content="en-us" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://www.fencesunlimitedinc.com/logo.svg" />
-		<meta property="og:image" content="https://www.fencesunlimitedinc.com/logo.svg" />
-		<meta property="og:image:secure_url" content="https://www.fencesunlimitedinc.com/logo.svg" />
-		<meta property="og:image:type" content="image/svg" />
-		<meta property="og:image:width" content="300" />
-		<meta property="og:image:height" content="200" />
+		<meta
+			name="twitter:image"
+			content="https://www.fencesunlimitedinc.com/fences-unlimited-inc.png"
+		/>
+		<meta
+			property="og:image"
+			content="https://www.fencesunlimitedinc.com/fences-unlimited-inc.png"
+		/>
+		<meta
+			property="og:image:secure_url"
+			content="https://www.fencesunlimitedinc.com/fences-unlimited-inc.png"
+		/>
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="1500" />
+		<meta property="og:image:height" content="1000" />
 		<meta property="og:logo" content="https://www.fencesunlimitedinc.com/logo.svg" size="300x200" />
 
 		<script type="application/ld+json">
