--- a/src/app.html
+++ b/src/app.html
@@ -349,14 +349,14 @@
 			}
 
 			@font-face {
-				font-family: 'Poppl Laudatio Regular';
+				font-family: 'Poppl Laudatio Regular', 'Times New Roman', 'serif';
 				src:
 					local('Poppl Laudatio Regular'),
 					url('%sveltekit.assets%/Poppl-Laudatio Regular.woff2') format('woff2'),
 					url('%sveltekit.assets%/Poppl-Laudatio Regular.woff') format('woff');
 				font-weight: normal;
 				font-style: normal;
-				font-display: block;
+				font-display: swap;
 			}
 
 			h1,
